# Intelligent_robot

./: .gitignore  AGENTS.md
doc/: task_manager_demo.md
docs/: AGENT.md  PROJECT_STATUS.md  yolopose_bpu_deploy.md
docs/handoff/: 2026-05-22_0104_handoff.md  2026-05-22_0133_handoff.md  2026-05-22_0140_handoff.md  2026-05-23_1704_handoff.md  2026-05-23_1901_handoff.md  2026-05-23_2100_handoff.md  2026-05-24_1753_handoff.md  2026-05-25_2201_handoff.md  2026-05-27_1544_handoff.md  2026-05-27_2125_handoff.md  2026-05-27_2305_yolopose_bpu_handoff.md  2026-05-30_2154_handoff.md
src/base_controller/: CMakeLists.txt  package.xml
src/base_controller/doc/: base_controller_workflow.md  dwb_path_following_branch.md  elderly_companion_robot_mermaid.md  elderly_companion_robot_roadmap.md  git_worktree_parallel_workflow.md  navigation_tuning_since_docs_version.md  performance_optimization_roadmap.md  rpp_goal_rotation_branch.md  rpp_narrow_passage_branch.md  waypoint_manager_usage.md
src/base_controller/launch/: mapping.launch.py  navigation.launch.py  navigation_backup.launch.py  waypoint_calibration.launch.py
src/base_controller/maps/: map2.pgm  my_map1.pgm  my_map1.yaml
src/base_controller/param/: my_nav2_params.yaml  my_nav2_params_backup.yaml
src/demo_manager/: package.xml  setup.cfg  setup.py
src/demo_manager/demo_manager/: demo_manager_node.py
src/demo_manager/doc/: demo_manager_usage.md
src/demo_manager/launch/: demo_manager.launch.py
src/follower_controller/: package.xml  setup.py
src/medicine_box/: package.xml  setup.cfg  setup.py
src/person_tracker/: setup.py
src/rosa_agent/: .env.example  README.md  package.xml  setup.cfg  setup.py
src/rosa_agent/doc/: voice_usage.md
src/rosa_agent/launch/: demo_with_rviz.launch.py
src/rosa_agent/rosa_agent/: __init__.py  action_tools.py  agent.py  always_listen_voice_cli.py  asr_test.py  cli.py  config.py  tts_node.py  voice.py  voice_cli.py
src/rosa_agent/scripts/: rosa_cli  rosa_voice_cli  test_asr
src/task_manager/: package.xml  setup.py
src/task_manager/config/: named_locations.yaml
src/task_manager/doc/: robot_server_usage.md
src/task_manager/launch/: robot_server.launch.py  wakeup_demo.launch.py
src/task_manager/task_manager/: task_manager_node.py
src/task_manager_interfaces/: CMakeLists.txt  package.xml
(+24 files in other folders)
