<?xml version="1.0"?>
<package format="3">
  <name>demo_manager</name>
  <version>0.1.0</version>
  <description>High-level demo flow orchestrator for the elderly companion robot.</description>
  <maintainer email="pan@example.com">pan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>task_manager_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
