<?xml version="1.0"?>
<package format="3">
  <name>rosa_agent</name>
  <version>0.1.0</version>
  <description>ROSA agent CLI and voice CLI for the Intelligent_robot ROS2 workspace.</description>
  <maintainer email="pan@example.com">pan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-dotenv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>task_manager_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
